force-app/main/default/objects/Knowledge__kav/fields/KA_Data_Category__c.field-meta.xml
<CustomField>
    <fullName>KA_Data_Category__c</fullName>
    <label>KA Data Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>