force-app/main/default/objects/Knowledge__kav/recordTypes/SDO_Knowledge_Cirrus.recordType-meta.xml
<RecordType>
    <fullName>SDO_Knowledge_Cirrus</fullName>
    <active>true</active>
    <label>Cirrus</label>
</RecordType>