force-app/main/default/objects/Knowledge__kav/recordTypes/SDO_Knowledge_FAQ.recordType-meta.xml
<RecordType>
    <fullName>SDO_Knowledge_FAQ</fullName>
    <active>true</active>
    <label>FAQ</label>
</RecordType>