force-app/main/default/objects/Knowledge__kav/recordTypes/SDO_Knowledge_KCSArticle.recordType-meta.xml
<RecordType>
    <fullName>SDO_Knowledge_KCSArticle</fullName>
    <active>true</active>
    <label>KCSArticle</label>
</RecordType>